--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,13 @@ input[type='text'] {
 	font-size: 1rem;
 	outline: none;
 }
+
+button {
+	width: 100%;
+	min-height: 48px;
+	margin-top: 0.5rem;
+	padding: 0.25rem;
+	border-radius: 0.25rem;
+	box-shadow: 2px 2px 5px #333;
+	font-size: 1rem;
+}
